--- a/game.html
+++ b/game.html
@@ -1,140 +1,140 @@
 <!DOCTYPE html>
 <html>
-        <head>
-                <meta charset="UTF-8">
-                <link rel="icon" href="logo.png">
-                <title>≡¥Ö╜≡¥Ö╕≡¥Üü≡¥Ö░≡¥Ö╜≡¥Ö╣≡¥Ö░≡¥Ö╜ ≡¥Ö▓≡¥Üü≡¥Ö┤≡¥Ö░≡¥Üâ≡¥Ö╕≡¥Ö╛≡¥Ö╜≡¥Üé</title>
-        </head>
-        <style>
-                body{
-                        margin:0px;
-                        background-color:black;
-                     }
-                .heading{
-                        background-color:maroon;
-                        display:flex;
-                        align-items:center;
-                        color:yellow;
-                        }
-                .frame{
-                        text-align:center;
-                        }
-                .btn{
-                        background-color:cyan;
-                        margin:0px;
-                        color:cyan;
-                        font-size:50px;
-                        border:none;
-                     }
-                td{
-                        background-color:cyan;
-                        margin:0px;
-                        color:cyan;
-                        font-size:50px;
-                        padding:20px;
-                        padding-top:0px;
-
-                     }
-                .btn1{
-                        text-align:center;
-                        background-color:cyan;
-                        margin:0px;
-                        font-size:50px;
-                        color:black;
-                     }
-                .btn2{
-                        text-align:center;
-                        background-color:cyan;
-                        margin:0px;
-                        font-size:50px;
-                        color:teal;
-                     }
-                .t{
-                        color:green;
-                        text-align:center;
-                   }
-                #statues{
-                        color:white;
-                        }
-        </style>
-        <body>
-                <div class="heading">
-                        <img src="logo.png" width=100px height=100px;>
-                        <h1>≡¥Ö╛≡¥Üü≡¥Ö╢≡¥Ö░≡¥Ö╜≡¥Ö╕≡¥Üé≡¥Ö░≡¥Üâ≡¥Ö╕≡¥Ö╛≡¥Ö╜</h1>
-                </div>
-        <h1 class="t">≡¥Üâ≡¥Ö╕≡¥Ö▓-≡¥Üâ≡¥Ö░≡¥Ö▓-≡¥Üâ≡¥Ö╛≡¥Ö┤</h1>
-        <center>
-        <table border=1>
-        <tr>
-                <td id="b1"><button class="btn" onclick="f('b1')">_</button></td>
-                <td id="b2"><button class="btn" onclick="f('b2')">_</button></td>
-                <td id="b3"><button class="btn" onclick="f('b3')">_</button></td>
-        </tr>
-        <tr>
-                <td id="b4"><button class="btn" onclick="f('b4')">_</button></td>
-                <td id="b5"><button class="btn" onclick="f('b5')">_</button></td>
-                <td id="b6"><button class="btn" onclick="f('b6')">_</button></td>
-        </tr>
-        <tr>
-                <td id="b7"><button class="btn" onclick="f('b7')">_</button></td>
-                <td id="b8"><button class="btn" onclick="f('b8')">_</button></td>
-                <td id="b9"><button class="btn" onclick="f('b9')">_</button></td>
-        </tr>
-        </table>
-        </center>
-                <script>
-                        let player1='<span class="btn1">X</span>';
-                        let player2='<span class="btn2">O</span>';
-                        function ch(){
+	<head>
+		<meta charset="UTF-8">
+		<link rel="icon" href="logo.png">
+		<title>𝙽𝙸𝚁𝙰𝙽𝙹𝙰𝙽 𝙲𝚁𝙴𝙰𝚃𝙸𝙾𝙽𝚂</title>
+	</head>
+	<style>
+		body{
+			margin:0px;
+			background-color:black;
+		     }
+		.heading{
+			background-color:maroon;
+			display:flex;
+			align-items:center;
+			color:yellow;
+			}
+		.frame{
+			text-align:center;
+			}
+		.btn{
+			background-color:cyan;
+			margin:0px;
+			color:cyan;
+			font-size:50px;
+			border:none;
+		     }
+		td{
+			background-color:cyan;
+			margin:0px;
+			color:cyan;
+			font-size:50px;
+			padding:20px;
+			padding-top:0px;
+			
+		     }
+		.btn1{
+			text-align:center;
+			background-color:cyan;
+			margin:0px;
+			font-size:50px;
+			color:black;
+		     }
+		.btn2{
+			text-align:center;
+			background-color:cyan;
+			margin:0px;
+			font-size:50px;
+			color:teal;
+		     }
+		.t{
+			color:green;
+			text-align:center;
+		   }
+		#statues{
+			color:white;
+			}
+	</style>
+	<body>
+		<div class="heading">
+			<img src="logo.png" width=100px height=100px;>
+			<h1>𝙾𝚁𝙶𝙰𝙽𝙸𝚂𝙰𝚃𝙸𝙾𝙽</h1>
+		</div>
+	<h1 class="t">𝚃𝙸𝙲-𝚃𝙰𝙲-𝚃𝙾𝙴</h1>
+	<center>
+	<table border=1>
+	<tr>
+		<td id="b1"><button class="btn" onclick="f('b1')">_</button></td>
+		<td id="b2"><button class="btn" onclick="f('b2')">_</button></td>
+		<td id="b3"><button class="btn" onclick="f('b3')">_</button></td>
+	</tr>
+	<tr>
+		<td id="b4"><button class="btn" onclick="f('b4')">_</button></td>
+		<td id="b5"><button class="btn" onclick="f('b5')">_</button></td>
+		<td id="b6"><button class="btn" onclick="f('b6')">_</button></td>
+	</tr>
+	<tr>
+		<td id="b7"><button class="btn" onclick="f('b7')">_</button></td>
+		<td id="b8"><button class="btn" onclick="f('b8')">_</button></td>
+		<td id="b9"><button class="btn" onclick="f('b9')">_</button></td>
+	</tr>
+	</table>
+	</center>
+		<script>
+			let player1='<span class="btn1">X</span>';
+			let player2='<span class="btn2">O</span>';
+			function ch(){
 
 
 if(document.getElementById("b1").innerText=="X" && document.getElementById("b2").innerText=="X" && document.getElementById("b3").innerText=="X"){
-alert("≡¥Üê≡¥Ö╛≡¥Üä ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝚈𝙾𝚄 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b4").innerText=="X" && document.getElementById("b5").innerText=="X" && document.getElementById("b6").innerText=="X"){
-alert("≡¥Üê≡¥Ö╛≡¥Üä ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝚈𝙾𝚄 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b7").innerText=="X" && document.getElementById("b8").innerText=="X" && document.getElementById("b9").innerText=="X"){
-alert("≡¥Üê≡¥Ö╛≡¥Üä ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝚈𝙾𝚄 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b1").innerText=="O" && document.getElementById("b2").innerText=="O" && document.getElementById("b3").innerText=="O"){
-alert("≡¥Ö░≡¥Ö╕ ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝙰𝙸 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b4").innerText=="O" && document.getElementById("b5").innerText=="O" && document.getElementById("b6").innerText=="O"){
-alert("≡¥Ö░≡¥Ö╕ ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝙰𝙸 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b7").innerText=="O" && document.getElementById("b8").innerText=="O" && document.getElementById("b9").innerText=="O"){
-alert("≡¥Ö░≡¥Ö╕ ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝙰𝙸 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b1").innerText=="X" && document.getElementById("b4").innerText=="X" && document.getElementById("b7").innerText=="X"){
-alert("≡¥Üê≡¥Ö╛≡¥Üä ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝚈𝙾𝚄 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b2").innerText=="X" && document.getElementById("b5").innerText=="X" && document.getElementById("b8").innerText=="X"){
-alert("≡¥Üê≡¥Ö╛≡¥Üä ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝚈𝙾𝚄 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b3").innerText=="X" && document.getElementById("b6").innerText=="X" && document.getElementById("b9").innerText=="X"){
-alert("≡¥Üê≡¥Ö╛≡¥Üä ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝚈𝙾𝚄 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b1").innerText=="O" && document.getElementById("b4").innerText=="O" && document.getElementById("b7").innerText=="O"){
-alert("≡¥Ö░≡¥Ö╕ ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝙰𝙸 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b2").innerText=="O" && document.getElementById("b5").innerText=="O" && document.getElementById("b8").innerText=="O"){
-alert("≡¥Ö░≡¥Ö╕ ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝙰𝙸 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b3").innerText=="O" && document.getElementById("b6").innerText=="O" && document.getElementById("b9").innerText=="O"){
-alert("≡¥Ö░≡¥Ö╕ ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝙰𝙸 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b1").innerText=="O" && document.getElementById("b5").innerText=="O" && document.getElementById("b9").innerText=="O"){
-alert("≡¥Ö░≡¥Ö╕ ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝙰𝙸 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b3").innerText=="O" && document.getElementById("b5").innerText=="O" && document.getElementById("b7").innerText=="O"){
-alert("≡¥Ö░≡¥Ö╕ ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝙰𝙸 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b1").innerText=="X" && document.getElementById("b5").innerText=="X" && document.getElementById("b9").innerText=="X"){
-alert("≡¥Üê≡¥Ö╛≡¥Üä ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝚈𝙾𝚄 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(document.getElementById("b3").innerText=="X" && document.getElementById("b5").innerText=="X" && document.getElementById("b7").innerText=="X"){
-alert("≡¥Üê≡¥Ö╛≡¥Üä ≡¥Üå≡¥Ö╛≡¥Ö╜ ≡¥Üâ≡¥Ö╖≡¥Ö┤ ≡¥Ö╝≡¥Ö░≡¥Üâ≡¥Ö▓≡¥Ö╖ !");
+alert("𝚈𝙾𝚄 𝚆𝙾𝙽 𝚃𝙷𝙴 𝙼𝙰𝚃𝙲𝙷 !");
 window.location.reload();
 }else if(
     document.getElementById("b1").innerText !== "_" &&
@@ -147,20 +147,20 @@ window.location.reload();
     document.getElementById("b8").innerText !== "_" &&
     document.getElementById("b9").innerText !== "_"
 ){
-    alert("≡¥Ö╝≡¥Üè≡¥Ü¥≡¥Üî≡¥Üæ ≡¥Ö│≡¥Ü¢≡¥Üè≡¥Üá !");
+    alert("𝙼𝚊𝚝𝚌𝚑 𝙳𝚛𝚊𝚠 !");
     window.location.reload();
 }
 }
 
 
-                        function f(t){
-                                let data=document.getElementById(t).innerText;
-                                if(data==="_"){
-                                        document.getElementById(t).innerHTML=player1;
-                                        ch();
-                                        ai();
-                                        }
-                                }
+			function f(t){
+				let data=document.getElementById(t).innerText;
+				if(data==="_"){
+					document.getElementById(t).innerHTML=player1;
+					ch();
+					ai();
+					}
+				}
 function ai(){
 
     let winPatterns = [
@@ -216,6 +216,6 @@ function play(id){
 
 
 
-                </script>
-        </body>
+		</script>
+	</body>
 </html>
